WIP - Example status extension

--- a/assets/app/index.html
+++ b/assets/app/index.html
@@ -47,6 +47,7 @@
       </div>
       <div class="collapse navbar-collapse navbar-collapse-1">
         <ul class="nav navbar-nav navbar-utility">
+          <li id="outage" style="display: none;"></li>
           <li>
             <a href="http://docs.openshift.org/latest/welcome/index.html">
             <span class="fa fa-files-o fa-fw"></span> Documentation</a>
